<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2012-2016 Daniel Medina <http://danielme.com>
 *
 * This file is part of "Muspy for Android".
 *
 * "Muspy for Android" is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, version 3.
 *
 * "Muspy for Android" is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License version 3
 * along with this program.  If not, see <http://www.gnu.org/licenses/gpl-3.0.html/>
 */
--><menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_follow"
        android:title="@string/action_follow"
        app:showAsAction="always"
        android:icon="@drawable/ic_add"/>

    <item
        android:id="@+id/action_unfollow"
        android:title="@string/action_unfollow"
        app:showAsAction="always"
        android:icon="@drawable/ic_delete"/>

    <item
        android:id="@+id/youtube"
        android:title="@string/youtube"
        app:showAsAction="never"/>

    <item
        android:id="@+id/spotify"
        android:title="@string/spotify"
        app:showAsAction="never"/>

    <item
        android:id="@+id/deezer"
        android:title="@string/deezer"
        app:showAsAction="never"/>

    <item
        android:id="@+id/lastfm"
        android:title="@string/title_lastfm"
        app:showAsAction="never"/>

    <item
        android:id="@+id/google"
        android:title="@string/google"
        app:showAsAction="never"/>

    <item
        android:id="@+id/musicbrainz"
        android:title="@string/musicbrainz"
        app:showAsAction="never"/>

    <item
        android:id="@+id/amazon"
        android:title="@string/amazon"
        app:showAsAction="never"/>

    <item
        android:id="@+id/play"
        android:title="@string/google_play"
        app:showAsAction="never"/>

</menu>